--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,13 +106,117 @@ a {
 	text-decoration: none;
 }
 main img {
-	margin: 10px 20px
+	margin: 10px 20px;
+	width: 150px;
+	height:150px;
 }
 
 li {
 	font-size: 1.15em;
 	margin-bottom: 9px;
 }
+
+/*now I really understand why games are written specifically for phones!!*/
+/*start media querries*/
+
+@media screen and (max-width: 768px) {
+
+    main img {
+	width: 125px;
+	height:125px;
+}
+
+	.box {
+		width: 768px;
+		padding: 20px;
+	}
+}/* end media max 768*/
+
+
+
+@media screen and (max-width: 670px) {
+  
+    main img {
+	margin: 10px 20px;
+	width: 95px;
+	height:95px;
+	}
+
+	.box {
+		width: 600px;
+		padding: 5px;
+	}
+
+	h1 {
+		font-size: 1.50em;
+		line-height: 150%;
+	}
+
+	h2 {
+		font-size: 1em;
+		font-weight: bolder;
+	}
+
+	h3 {
+		font-family: 'Libre Baskerville', serif;
+		font-size: .9em;
+		font-style: italic;
+	}
+
+	h4 {
+		font-size: .9em;
+		font-weight: bold;
+		margin-bottom: 7px;
+	}
+
+	p {
+		font-size: .9em;
+
+}
+}/* end media max 640*/
+
+@media screen and (max-width: 514px) {
+    
+    main img {
+		margin: 10px 10px;
+		width: 60px;
+		height:60px;
+	}
+
+	header {
+		width: 100%;
+		overflow: scroll;
+	}
+	.box {
+		margin:auto;
+		width: 360px;
+		overflow: auto;
+	}
+	.score {
+		width: 100%;
+		float: none;
+		padding: 10px;
+	}
+
+	.board {
+		width: 100%;
+		float: none;
+		padding: 10px;
+	}
+	.instructions {
+		width: 100%;
+		float: none;
+	}
+
+	.game {
+		width: 100%;
+		float: none;
+	}
+
+}/* end media max 414*/
+
+
+
 /*
 #00AD72 green background
 #00BA7A shade green background
